--- a/src/main/resources/templates/auto_complete.html
+++ b/src/main/resources/templates/auto_complete.html
@@ -23,23 +23,23 @@
             border-radius: 20px;
             background-color: #fff;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            width: 350px; /* Sabit genişlik ayarı */
+            width: 350px; /* Fixed width setting */
             margin: 0 auto;
             display: flex;
-            flex-direction: column; /* Dikey hizalama */
-            justify-content: center; /* Ortalama */
-            align-items: center; /* Ortalama */
+            flex-direction: column; /* Vertical alignment */
+            justify-content: center; /* Average */
+            align-items: center; /* Average */
         }
 
         h1 {
             color: #3498db;
             margin-bottom: 20px;
-            display: flex; /* Yıldızları dikey hizala */
-            justify-content: center; /* Yıldızları dikey hizala */
+            display: flex; /* Align stars vertically */
+            justify-content: center; /* Align stars vertically */
         }
 
         i {
-            margin: 0 5px; /* Yıldızlar arasındaki boşluk */
+            margin: 0 5px; /* Space between asterisks */
         }
 
         #autocompleteInput {
@@ -77,7 +77,7 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 <script>
     $(function() {
-        // Auto-complete için AJAX çağrısı
+        // AJAX call for auto-complete
         $("#autocompleteInput").autocomplete({
             source: function(request, response) {
                 $(".loading").show();
@@ -91,10 +91,10 @@
                     }
                 });
             },
-            minLength: 1, // Önerilerin gösterilmeye başlanacağı karakter sayısı
+            minLength: 1, // Number of characters to start showing suggestions
             messages: {
-                noResults: '', // Arama sonucunda eşleşen öğe yoksa mesajı kaldır
-                results: function() {} // Önerileri gösterme mesajını kaldır
+                noResults: '', // Remove the message if there is no matching item in the search result
+                results: function() {} // Remove the message to show suggestions
             }
         });
     });
